--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "1.3.0",
     "react-native-reanimated": "1.1.0",
+    "react-native-svg": "^9.9.3",
     "react-native-web": "^0.11.4"
   },
   "devDependencies": {
