--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "dependencies": {
     "expo": "^34.0.1",
     "expo-asset": "~6.0.0",
+    "expo-facebook": "~6.0.0",
+    "firebase": "^7.3.0",
+    "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-fbsdk": "^1.1.1",
     "react-native-gesture-handler": "1.3.0",
     "react-native-reanimated": "1.1.0",
     "react-native-svg": "^9.9.3",
