--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-fbsdk": "^1.1.1",
-    "react-native-gesture-handler": "1.3.0",
-    "react-native-reanimated": "1.1.0",
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-reanimated": "~1.1.0",
+    "react-native-screens": "1.0.0-alpha.22",
     "react-native-svg": "^9.9.3",
-    "react-native-web": "^0.11.4"
+    "react-native-web": "^0.11.4",
+    "react-navigation": "^4.0.10"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
