--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/samples": "^3.0.3",
     "expo": "^34.0.1",
     "expo-asset": "~6.0.0",
     "expo-facebook": "~6.0.0",
@@ -18,11 +19,15 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-fbsdk": "^1.1.1",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-maps": "0.26.1",
+    "react-native-platform-touchable": "^1.1.1",
     "react-native-reanimated": "~1.1.0",
     "react-native-screens": "1.0.0-alpha.22",
     "react-native-svg": "^9.9.3",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^4.0.10"
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.5.6"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
