--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@mapbox/polyline": "^1.1.0",
     "core-util-is": "^1.0.2",
     "expo": "^35.0.1",
-    "expo-asset": "~6.0.0",
+    "expo-asset": "~7.0.0",
     "expo-constants": "^7.0.1",
-    "expo-facebook": "~6.0.0",
-    "expo-permissions": "~6.0.0",
+    "expo-facebook": "~7.0.0",
+    "expo-permissions": "~7.0.0",
     "firebase": "^7.3.0",
     "lodash": "^4.17.15",
     "native-base": "^2.13.8",
@@ -25,10 +25,11 @@
     "react-native-elements": "^1.2.7",
     "react-native-fbsdk": "^1.1.1",
     "react-native-gesture-handler": "~1.3.0",
-    "react-native-maps": "0.26.1",
+    "react-native-maps": "0.25.0",
     "react-native-platform-touchable": "^1.1.1",
-    "react-native-reanimated": "~1.1.0",
-    "react-native-screens": "1.0.0-alpha.22",
+    "react-native-reanimated": "~1.2.0",
+    "react-native-router-flux": "^4.0.6",
+    "react-native-screens": "~1.0.0-alpha.23",
     "react-native-snap-carousel": "^3.8.4",
     "react-native-svg": "^9.9.3",
     "react-native-swipeable-flat-list": "^0.1.1",
